(added) blog view

--- a/public/assets/css/custom.css
+++ b/public/assets/css/custom.css
@@ -327,13 +327,54 @@ section.body-blog a{
   text-decoration: none;
 }
 
-section.body-blog  div.card {
-  background: rgba(255,255,255, 0.2);
+section.body-blog div.card {
+  background: rgba(36, 43, 80, 0.3);
   color: white;
-  border: 2px solid rgba(255,255,255, 0.4);
+  border: 2px solid rgba(255,255,255, 0.7);
 }
 
-section.body-blog  div.card img.card-img-top{
+section.body-blog div.card img.card-img-top{
+  width: 100%;
   height:300px;
   object-fit: cover;
+}
+
+section.body-blog-view {
+  /* height: 100vh; */
+  background-color: black;
+  padding-top:50px;
+  padding-bottom:50px;
+  min-height: 100vh;
+  text-decoration: none;
+}
+
+section.body-blog-view a{
+  text-decoration: none;
+}
+
+section.body-blog-view div.card {
+  background: rgb(0,0,0);
+  color: white;
+  border: 0px solid rgba(255,255,255, 0.4);
+}
+
+section.body-blog-view div.card img.card-img-top{
+  width: 100%;
+  height:600px;
+  object-fit: cover;
+}
+
+
+@media (max-width: 991.98px) {
+  section.body-blog div.card img.card-img-top{
+    width: 100%;
+    height: 150px;
+    object-fit: cover;
+  }
+  
+  section.body-blog-view div.card img.card-img-top{
+    width: 100%;
+    height: 300px;
+    object-fit: cover;
+  }
 }
